--- a/configs/nucleo-h743zi/src/Makefile
+++ b/configs/nucleo-h743zi/src/Makefile
@@ -36,7 +36,7 @@
 -include $(TOPDIR)/Make.defs
 
 ASRCS =
-CSRCS =
+CSRCS = stm32_boot.c stm32_bringup.c
 # stm32_boot.c stm32_spi.c stm32_bringup.c
 
 # ifeq ($(CONFIG_ARCH_LEDS),y)
